# crowfly

./: .gitignore  Cargo.toml  README.md  extract_ch_border.py  extract_hershey_fonts.py
.github/workflows/: build.yml  release.yml
assets/: app.js  index.html  style.css
experiments/: baseline.json  bench-after.json  bench-before.json  bench-final.json  compressed.json  fallback.json  flat.json  gate.json  geom-cross.json  geom-prune.json  geom60.json  perf-after.json  perf-before-warm.json  perf-before.json  perf-final.json  tails-fix.json  tuned.json  turn100.json  turn150.json  turn18.json  turn35.json  turn50.json  turn75.json  v3.json
scripts/: bench_routing.ps1  probe.py
src/: dem.rs  elevation.rs  explore.rs  fetch.rs  geodesy.rs  hershey_fonts.rs  lib.rs  main.rs  osm.rs  output.rs  route.rs  server.rs  shape.rs  text.rs  viability.rs
